--- a/css/style.css
+++ b/css/style.css
@@ -785,7 +785,7 @@ Product Page CSS
 
 
 #navbar {
-    /* background-color: #333; Black background color */
+     background-color: #333; Black background color 
     position: fixed; /* Make it stick/fixed */
     top: 0; /* Stay on top */
     width: 100%; /* Full width */
